# Phish_mail

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_REVIEW.md  PORTFOLIO.md  README.md  TESTING.md  docker-compose.yml  download_dataset.py  setup-hooks.bat  setup-hooks.sh
.github/workflows/: ci.yml
backend/: pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: predict.py
backend/app/middleware/: error.py  logging.py
backend/app/schemas/: health.py  predict.py
backend/app/services/: batch.py  explainability.py  feature_extraction.py  health.py  inference.py  model_registry.py
backend/app/utils/: constants.py  keywords.py  settings.py  text.py
backend/scripts/: train.py
backend/tests/: conftest.py  test_api.py  test_api_endpoints.py  test_features.py  test_predict.py  test_services.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/features/detector/: DetectorPage.tsx
frontend/shared/components/: Badge.tsx  Card.tsx  ConfidenceGauge.tsx  FloatingBubbles.tsx  HighlightText.tsx  Providers.tsx  ResultCard.tsx
frontend/shared/hooks/: useAnalyzeEmail.ts
frontend/shared/lib/: api.ts  schema.ts
frontend/tests/: DetectorPage.test.tsx  api.test.ts
