[project]
name = "phish-mail-backend"
version = "0.1.0"
description = "Phishing email detector backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.2",
  "numpy>=2.0.0",
  "joblib>=1.4.2",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "shap>=0.44.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]

[tool.black]
line-length = 88


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
